move validation form into a partial

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <nav>
       <div class="logo sm-col-left">
         <%= link_to "ScrabbleWeb", root_url %>
+        <%= render 'layouts/validation_form' %>
       </div>
     </nav>
 
